roles/common/files/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.0.0/24 --dport 2377 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.0.0/24 --dport 7946 -j ACCEPT
-A INPUT -p udp -m udp -s 192.168.0.0/24 --dport 7946 -j ACCEPT
-A INPUT -p udp -m udp -s 192.168.0.0/24 --dport 4789 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
COMMIT
